fixed chat functionality to be guarded by facebook login

--- a/StocksWithFriends/StocksWithFriends/Views/Chat/Chat.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Chat/Chat.cshtml
@@ -1,11 +1,9 @@
-﻿@{
-    ViewBag.Title = "Chat";
-}
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
+﻿<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
   <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
 <script type="text/javascript" src="/Resources/uploadify/jquery.uploadify.min.js"></script>
-
+﻿@if (Request.IsAuthenticated)
+{
 <h2>Chat</h2>
 
 <label for="msg" >Message</label>
@@ -18,6 +16,7 @@
         <h2> Current Chat</h2>
     </div>
     <div id="chatHistory" style="float:left;position:relative;margin-left:150px;">
+        <button id="loadHistory">Load History</button>
         <h2> Chat History</h2>
     </div>
 </div>
@@ -27,9 +26,13 @@
 
         // page is now ready, initialize the calendar...
 
+        
+    });
+
+    $('#loadHistory').click(function (e) {
         $.ajax({
             url: '/Chat/GetChatHistory',
-            data: {userName: fbName},
+            data: { userName: fbName },
             success: function (data) {
                 alert("success");
                 var logItem = [];
@@ -43,9 +46,9 @@
                     });
                 }
                 for (var j = 0; j < logItem.length; j++) {
-                    $('#chatHistory').append('<br />' + '(' + logItem[j].timeStamp + ')  '+logItem[j].name+': '+logItem[j].message);
+                    $('#chatHistory').append('<br />' + '(' + logItem[j].timeStamp + ')  ' + logItem[j].name + ': ' + logItem[j].message);
                 }
-            
+
             },
             error: function () {
                 alert("Failed");
@@ -96,10 +99,4 @@
      var fbName = "@Session["name"]";
 
 </script>
-
-
-
-
-
-
-
+}
