--- a/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
@@ -30,7 +30,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Stocks", "Index", "Stock")</li>
                     <li>@Html.ActionLink("Calendar", "Index", "Calender")</li>
-                    <li>@Html.ActionLink("Add a Friend", "FriendRequest", "Facebook")</li>
+                    <li>@Html.ActionLink("Chat", "Chat", "Chat")</li>
+                    <li>@Html.ActionLink("Add Friend", "FriendRequest", "Facebook")</li>
                 </ul>
             </div>
             <div id="logindisplay">
