--- a/StocksWithFriends/StocksWithFriends/Content/Site.css
+++ b/StocksWithFriends/StocksWithFriends/Content/Site.css
@@ -111,6 +111,7 @@ page width. Or, you can specify an exact pixel width. */
     -webkit-border-radius: 4px 0 0 0;
     -moz-border-radius: 4px 0 0 0;
     border-radius: 4px 0 0 0;
+    overflow: hidden;
 }
 
 footer,
