Calendar home partial work.

--- a/StocksWithFriends/StocksWithFriends/Views/Home/Index.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 
 <h2>@ViewBag.Message</h2>
 @{ Html.RenderAction("Ticker", "Stock"); }
+@{ Html.RenderAction("Home", "Calender"); }
 <p>
     @{ Html.RenderAction("Home", "Facebook"); }
 </p>
