Calendar events on the home page.

--- a/StocksWithFriends/StocksWithFriends/Content/Site.css
+++ b/StocksWithFriends/StocksWithFriends/Content/Site.css
@@ -437,5 +437,20 @@ div#title {
     left: 580px;
 }
 
+#welcome-home-events {
+    position: absolute;
+    display: block;
+    width: 300px;
+    top: 348px;
+    left: 680px;
+    background-color: #eee;
+    border: 1px solid #e0e0e0;
+    padding: 20px;
+}
+
+    #welcome-home-events ul {
+        list-style-type: none;
+    }
+
 
 
